# HaskellFromFirstPrinciplesExercises

./: .gitignore
Ch10/: databaseProcessing.hs  exercises.hs  myFolds.hs  myScans.hs
Ch11/: asPatterns.hs  binaryTrees.hs  cipher.hs  exercises.hs  (+9 more)
Ch14/hangman/: hangman.cabal
Ch14/hangman/.stack-work/install/x86_64-osx/lts-8.23/8.0.2/flag-cache/: hangman-0.1.0.0  hangman-0.1.0.0-nj5xyex6SZEB8WXJhB7h8  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT
Ch14/hangman/.stack-work/install/x86_64-osx/lts-8.23/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHShangman-0.1.0.0-nj5xyex6SZEB8WXJhB7h8-ghc8.0.2.dylib
Ch14/hangman/.stack-work/install/x86_64-osx/lts-8.23/8.0.2/lib/x86_64-osx-ghc-8.0.2/hangman-0.1.0.0-nj5xyex6SZEB8WXJhB7h8/: Main.dyn_hi
Ch14/hangman/src/: Main.hs
Ch15/exercises/: exercises.cabal  exercises.hs
Ch15/exercises/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/pkgdb/: package.cache
Ch24/iniParsing/: iniParsing.cabal  iniParsing.hs
Ch24/iniParsing/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: checkers-0.4.7-JCilnLl5HALEbvtY44GPJt  learnParsers-0.1.0.0-KFbdejHoohACga8P9OAm82  memory-0.14.6-Aar7hKewN999MXzU9kvt2a  parsers-0.12.5-GnYuXhr66xHG7QyPR4udRA  scientific-0.3.5.1-JHsAAp34Yyd8e5v3sK3O5Q
Ch24/iniParsing/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSiniParsing-0.1.0.0-JqSAjFXyV08CtqkqtsVk7F-ghc8.0.2.dylib
Ch24/iniParsing/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/checkerTests-0.1.0.0-GU28hZFdz2F7gpteFaA0j9/: CheckerTests.dyn_hi
Ch24/iniParsing/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/fizzbuzz-0.1.0.0-IBWuXPxfFyWKZ90UVymEgf/: FizzBuzz.dyn_hi
Ch24/iniParsing/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/functorTests-0.1.0.0-15Gfc3yyyH5D1GpM9RPLBJ/: FunctorTests.dyn_hi
Ch26/exercises/: exercises.cabal  exercises.hs  fixit.hs  hitCounter.hs  morra.hs
Ch26/exercises/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: asn1-parse-0.9.4-96kZ6J4cmFC1crIy7sf8ZH  attoparsec-0.13.1.0-8bUdsjh6UCE83aHCxOEHna  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  exercises-0.1.0.0-2Undykys8Yh2zolsr1mhwZ  exercises-0.1.0.0-4iJ1dNT2ZZSEw8yTgykqM4  exercises-0.1.0.0-5gBMuUupdJOH7hlegQ9y6m  exercises-0.1.0.0-6Pq9SU2gXBe8WpCk7Gp6Ya  exercises-0.1.0.0-CsxXGT3zdvl7iblKVqWXb3  exercises-0.1.0.0-HC78Sf7LtWM4EUFwL15WLK  exercises-0.1.0.0-JPaODKrLNdbIJ5LSA3v2AM  foundation-0.0.13-G4GHWkMwmXnF7HKMtT8vGa  lens-aeson-1.0.1-HBlXScgNKg6FIHhSVxz1hr  psqueues-0.2.3.0-3SifEITsJstB5B1chSnur  scottyExample-0.1.0.0-8h0WFPt3FPt1fvajEZJle6  scottyExample-0.1.0.0-HiqkS1Pp9lwEXZ4GEXj4Wt  x509-1.7.1-4lBZxvHuUw2FrDSf0RtNid  x509-validation-1.6.8-80mkbL9VtTNF0oQ56EfQcN
Ch26/exercises/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSexercises-0.1.0.0-2Undykys8Yh2zolsr1mhwZ-ghc8.0.2.dylib  libHSexercises-0.1.0.0-4iJ1dNT2ZZSEw8yTgykqM4-ghc8.0.2.dylib  libHSexercises-0.1.0.0-6Pq9SU2gXBe8WpCk7Gp6Ya-ghc8.0.2.dylib  libHSexercises-0.1.0.0-HC78Sf7LtWM4EUFwL15WLK-ghc8.0.2.dylib  libHSouterInner-0.1.0.0-1nWr5KAJs716ZrnqIAdNmg-ghc8.0.2.dylib  libHSrandomExample-0.1.0.0-C1l0TdjIIl23CUkN2N85ss-ghc8.0.2.dylib  libHSscottyExample-0.1.0.0-HiqkS1Pp9lwEXZ4GEXj4Wt-ghc8.0.2.dylib  libHSscottyExample-0.1.0.0-IS9Eug2O6f43ROSqACfKdD-ghc8.0.2.dylib
Ch26/exercises/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/exercises-0.1.0.0-2Undykys8Yh2zolsr1mhwZ/: Exercises.dyn_hi
Ch26/exercises/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/pkgdb/: exercises-0.1.0.0-4iJ1dNT2ZZSEw8yTgykqM4.conf  package.cache
Ch26/outerInner/: outerInner.cabal  outerInner.hs
Ch26/outerInner/.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: charset-0.3.7.1-8XzlqAFUmfXDSOZRmiDkgy  crypto-pubkey-types-0.4.3-54Nmhb2gSWL6AGN2Lansyh  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  hourglass-0.2.10-pnbvWmzfcY1rOFETQEmcY  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
(+638 files in other folders)
