name:                hangman
version:             0.1.0.0
synopsis:            Hangman Game
description:         A Classic Word Guessing Game
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Haskell Book, and Daniel Kimbel
maintainer:          haskellbook.com
copyright:           2017 Haskell Book, and Daniel Kimbel
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hspec
