name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    Exercises
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >= 4.7 && <5
                    , QuickCheck
  hs-source-dirs:     .
  default-language:   Haskell2010
